--- a/Labfiles/02-azure-openai-api/Python/.env
+++ b/Labfiles/02-azure-openai-api/Python/.env
@@ -1,3 +1,3 @@
-AZURE_OAI_ENDPOINT=
-AZURE_OAI_KEY=
-AZURE_OAI_DEPLOYMENT=
+AZURE_OAI_ENDPOINT=https://swapnil-az-openai-001.openai.azure.com/
+AZURE_OAI_KEY=1071d97b3b1049d58e1e9c888c88aa9b
+AZURE_OAI_DEPLOYMENT=swapnil-gpt35-model-001
