--- a/Labfiles/03-prompt-engineering/Python/.env
+++ b/Labfiles/03-prompt-engineering/Python/.env
@@ -1,3 +1,3 @@
-AZURE_OAI_ENDPOINT=
-AZURE_OAI_KEY=
-AZURE_OAI_DEPLOYMENT=
+AZURE_OAI_ENDPOINT=https://swapnil-az-openai-prompt-002.openai.azure.com/
+AZURE_OAI_KEY=6f5570fa05ff45a9995ac072f4dc7292
+AZURE_OAI_DEPLOYMENT=swapnil-prompt-model-002
